# gtk4matjar

./: MANIFEST.in  README.md  TMPREADME.md  create_py_gtk4temp.py  meson.build  pyproject.toml
.github/workflows/: build-windows.yml
data/: com.example.gtk4matjar.desktop.in  com.example.gtk4matjar.gschema.xml  com.example.gtk4matjar.metainfo.xml.in
flatpak/: com.example.gtk4matjar.yml
po/: POTFILES.in  meson.build
pyinstaller/: font.conf  fonts.conf  gtk4matjar.spec
pyinstaller/hooks/: hook-gi.py  hook-gstreamer.py  hook-sqlmodel.py
src/gtk4matjar/: __main__.py  application.py  gstreamer.py  paths.py  window.py
src/gtk4matjar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gtk4matjar/resources/: gtk4matjar.gresource.xml
src/gtk4matjar/resources/css/: style.css
src/gtk4matjar/resources/ui/: shortcuts-dialog.ui  window.ui
